Potential overflow fix

--- a/src/components/section/Section.css
+++ b/src/components/section/Section.css
@@ -7,9 +7,11 @@
 }
 .section-content-wrap {
   height: auto;
-  /* overflow: hidden; */
+  width: 100%;
+  overflow: hidden;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
+  box-sizing: border-box;
 }
 .header-wrap {
   width: 100%;
